# oak_ros_poe

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
data/: README.md  left_mesh.calib  right_mesh.calib
include/oak_ros/: OakRosFactory.hpp  OakRosInterface.hpp
launch/: calibration.launch  oak.launch  poe.launch  record_oak.sh
script/: 01-save_device_calibration.py  02-flash_device_calibration.py  03-generate-mesh-file.py  camchain-nominal.yaml  camchain-pinhole-drone00.yaml  camchain-pinhole-drone01.yaml  camchain-pinhole-drone02.yaml  camchain-pinhole-drone03.yaml  camchain-pinhole-drone04.yaml  camchain-pinhole-drone05.yaml  camchain-pinhole-drone06.yaml  camchain-pinhole-drone07.yaml  camchain-pinhole-drone08.yaml  camchain-pinhole-drone09.yaml  camchain-pinhole-drone11.yaml  camchain-poe-720p.yaml  camchain.yaml  depthai_calib-poe-720p.json  depthai_calib_backup_cased_20220317.json  flash_device_calibration.py  run_all.sh  stereo_depth_video.py
src/: main.cpp
src/oak_ros/: OakRos.cpp  OakRos.hpp  OakRosFactory.cpp
test/: test_calibration_reader.cpp
